infra/k8s/base/gitlab-ci-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ci-exporter
spec:
  selector:
    app: gitlab-ci-exporter
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-ci-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-ci-exporter
  template:
    metadata:
      labels:
        app: gitlab-ci-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: gitlab-ci-exporter
          image: mvisonneau/gitlab-ci-pipelines-exporter:0.5.8
          imagePullPolicy: IfNotPresent
          args: ["--config", "/etc/gcpe/config.yaml"]
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/gcpe
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          configMap:
            name: gitlab-ci-exporter-config
